# xenocrat

./: .ghci  .gitignore  .travis.yml  README.md  THIRDPARTY.md  cicle.yml  circle.yml  xenocrat.cabal
src/: Aux.hs  Common.hs  Constants.hs  Main  Main.hs  Physics.hs  Render.hs  Vector.hs
src-exec/: GL.hs  Main.hs  Render.hs  RenderGL.hs
src/exec/: GL.hs  GLHelper.hs  GLInit.hs  Main.hs  RenderGL.hs  Shaders.hs  Simulation.hs
src/lib/: Common.hs  Constants.hs  Physics.hs
src/shader/: cross.geom  default.frag  default.vert  passthrough.vert  planet.frag  planet.tctrl  planet.teval  planet.vert  vector.geom
src/shader/glsl-noise/src/: noise3D.glsl
test/: Test.hs
