name:                xenocrat
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Orbital Mechanics Simulator
description:         Orbital Mechanics Simulator
license:             GPL-3
license-file:        LICENSE
author:              Tobias Markus
maintainer:          tobias@markus-regensburg.de
stability:           Experimental
homepage:            https://github.com/hesiod/xenocrat
bug-reports:         https://github.com/hesiod/xenocrat/issues
copyright:           Copyright © 2015 Tobias Markus
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -threaded -Wall
  exposed-modules:   Common, Constants, Physics
  -- other-modules:
  other-extensions:  TypeFamilies
  build-depends:     base, units, units-defs, vector-space, vector-space-opengl, OpenGL, deepseq
  hs-source-dirs:    src/lib
  default-language:  Haskell2010

executable xenocrat
  ghc-options:       -threaded -Wall
  main-is:           Main.hs
  other-modules:     RenderGL, GL, GLHelper, Simulation
  -- other-extensions:
  build-depends:     base, xenocrat, vector-space, vector-space-opengl, OpenGL >= 2.11.0.0, GLFW-b, GLUtil, linear, deepseq, suspend, timers, parallel, units, units-defs, split, file-embed, bytestring, stringsearch, containers, template-haskell, th-lift, th-lift-instances, array
  hs-source-dirs:    src/exec
  default-language:  Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  main-is:           Test.hs
  hs-source-dirs:    test
  build-depends:     base, xenocrat, QuickCheck, test-framework-quickcheck2
  default-language:  Haskell2010

source-repository head
  type:              git
  location:          git://github.com/hesiod/xenocrat.git
